# efficient_online_learning

./: LICENSE  README.md  fast_online_learning.launch  fast_online_learning.rviz  fast_online_learning_rui.launch
autoware/autoware_tracker/: README.md
autoware/autoware_tracker/src/detected_objects_visualizer/: visualize_detected_objects.cpp
autoware/autoware_tracker/src/lidar_euclidean_cluster_detect/: cluster.h  lidar_euclidean_cluster_detect.cpp
autoware_tracker/: CMakeLists.txt  README.md
autoware_tracker/config/: params.yaml  params.yaml.old  params.yaml.rui
autoware_tracker/msg/: DetectedObject.msg
autoware_tracker/src/detected_objects_visualizer/: visualize_detected_objects.cpp  visualize_detected_objects.cpp.rui
autoware_tracker/src/libkitti/: kitti.cpp  kitti.h
autoware_tracker/src/lidar_euclidean_cluster_detect/: cluster.cpp  cluster.h  lidar_euclidean_cluster_detect.cpp  lidar_euclidean_cluster_detect.cpp.old  lidar_euclidean_cluster_detect.cpp.rui  lidar_euclidean_cluster_detect.cpp.yang21icra
autoware_tracker/src/lidar_imm_ukf_pda_track/: imm_ukf_pda.cpp  imm_ukf_pda.cpp.old  imm_ukf_pda.cpp.rui  imm_ukf_pda.h
efficient_det_ros/: efficient_det_node.py  efficientdet_test.py  listener.py  node.py  node_video.py  readme.md
efficient_det_ros/projects/: kitti.yml
kitti_camera_ros/: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
kitti_camera_ros/launch/: kitti_camera_ros.launch
kitti_camera_ros/src/: kitti_camera_ros.cpp
kitti_velodyne_ros/: CMakeLists.txt  LICENSE  README.md  package.xml
kitti_velodyne_ros/launch/: kitti_velodyne_ros.launch  kitti_velodyne_ros.rviz  kitti_velodyne_ros_loam.launch  kitti_velodyne_ros_loam.rviz
kitti_velodyne_ros/src/: kitti_velodyne_ros.cpp
launch/: efficient_online_learning.launch  efficient_online_learning.rviz
log/: mem_log.bash  mem_plot.plt  orf_time_log  svm_time_log  time_plot.plt
online_forests_ros/: CMakeLists.txt  LICENSE  README.md  package.xml
online_forests_ros/config/: orf.conf
online_forests_ros/include/online_forests/: classifier.h  data.h  onlinenode.h  onlinerf.h  onlinetree.h  randomtest.h
online_forests_ros/launch/: online_forests_ros.launch
online_forests_ros/src/: online_forests_ros.cpp
online_forests_ros/src/online_forests/: Online-Forest.cpp  classifier.cpp  data.cpp  hyperparameters.cpp  onlinenode.cpp  onlinerf.cpp  onlinetree.cpp  randomtest.cpp  utilities.cpp
online_svm_ros/: CMakeLists.txt  LICENSE  README.md  package.xml
online_svm_ros/config/: svm.yaml
online_svm_ros/launch/: online_svm_ros.launch
online_svm_ros/src/: online_svm_ros.cpp
plane_fit_ground_filter/: plane_ground_filter.launch
plane_fit_ground_filter/rviz/: plane_fit_ground_filter.rviz
plane_fit_ground_filter/src/: plane_ground_filter_core.cpp
point_cloud_features/: CMakeLists.txt  README.md  fast_online_learning.launch  package.xml
point_cloud_features/include/autoware_tracker/: Centroids.h  CloudCluster.h  CloudClusterArray.h  DetectedObject.h  DetectedObjectArray.h
point_cloud_features/include/point_cloud_features/: point_cloud_features.h
point_cloud_features/launch/: point_cloud_feature_extractor.launch
point_cloud_features/src/: point_cloud_feature_extractor.cpp
point_cloud_features/src/point_cloud_features/: point_cloud_features.cpp
